force-app/main/default/objects/ContentVersion/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>File type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FileTypes</valueSetName>
    </valueSet>
</CustomField>