force-app/main/default/objects/ContentVersion/fields/JSON_fileupload__c.field-meta.xml
<CustomField>
    <fullName>JSON_fileupload__c</fullName>
    <description>If you want to change the file type when you upload a file, you can for instance fill this field with the JSON { Type__c: &quot;example&quot; }, then a trigger will parse the JSON to fill the ContentVersion fields</description>
    <label>JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>