force-app/main/default/objects/ContentVersion/fields/LastCheckOfRelationship__c.field-meta.xml
<CustomField>
    <fullName>LastCheckOfRelationship__c</fullName>
    <label>Last check of relationship</label>
    <type>DateTime</type>
</CustomField>