force-app/main/default/objects/ContentVersion/fields/PrivateFile__c.field-meta.xml
<CustomField>
    <fullName>PrivateFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private file</label>
    <type>Checkbox</type>
</CustomField>