force-app/main/default/objects/ContentVersion/fields/RelatedToRecord__c.field-meta.xml
<CustomField>
    <fullName>RelatedToRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to record</label>
    <type>Checkbox</type>
</CustomField>