force-app/main/default/objects/ContentVersion/fields/UnrelatedToRecords__c.field-meta.xml
<CustomField>
    <fullName>UnrelatedToRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unrelated to records</label>
    <type>Checkbox</type>
</CustomField>